added java 8 support